p3/y.output
Terminals unused in grammar

    IF
    THEN
    ELSE


Grammar

    0 $accept: calculator $end

    1 calculator: expressions

    2 expressions: expression
    3            | expressions ',' expression

    4 expression: NATURAL
    5           | expression '+' expression
    6           | expression '-' expression
    7           | expression '*' expression
    8           | expression '/' expression
    9           | '(' expression ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 9
    ')' (41) 9
    '*' (42) 7
    '+' (43) 5
    ',' (44) 3
    '-' (45) 6
    '/' (47) 8
    error (256)
    NATURAL (258) 4
    IF (259)
    THEN (260)
    ELSE (261)


Nonterminals, with rules where they appear

    $accept (14)
        on left: 0
    calculator (15)
        on left: 1
        on right: 0
    expressions (16)
        on left: 2 3
        on right: 1 3
    expression (17)
        on left: 4 5 6 7 8 9
        on right: 2 3 5 6 7 8 9


State 0

    0 $accept: • calculator $end

    NATURAL  shift, and go to state 1
    '('      shift, and go to state 2

    calculator   go to state 3
    expressions  go to state 4
    expression   go to state 5


State 1

    4 expression: NATURAL •

    $default  reduce using rule 4 (expression)


State 2

    9 expression: '(' • expression ')'

    NATURAL  shift, and go to state 1
    '('      shift, and go to state 2

    expression  go to state 6


State 3

    0 $accept: calculator • $end

    $end  shift, and go to state 7


State 4

    1 calculator: expressions •
    3 expressions: expressions • ',' expression

    ','  shift, and go to state 8

    $default  reduce using rule 1 (calculator)


State 5

    2 expressions: expression •
    5 expression: expression • '+' expression
    6           | expression • '-' expression
    7           | expression • '*' expression
    8           | expression • '/' expression

    '+'  shift, and go to state 9
    '-'  shift, and go to state 10
    '*'  shift, and go to state 11
    '/'  shift, and go to state 12

    $default  reduce using rule 2 (expressions)


State 6

    5 expression: expression • '+' expression
    6           | expression • '-' expression
    7           | expression • '*' expression
    8           | expression • '/' expression
    9           | '(' expression • ')'

    '+'  shift, and go to state 9
    '-'  shift, and go to state 10
    '*'  shift, and go to state 11
    '/'  shift, and go to state 12
    ')'  shift, and go to state 13


State 7

    0 $accept: calculator $end •

    $default  accept


State 8

    3 expressions: expressions ',' • expression

    NATURAL  shift, and go to state 1
    '('      shift, and go to state 2

    expression  go to state 14


State 9

    5 expression: expression '+' • expression

    NATURAL  shift, and go to state 1
    '('      shift, and go to state 2

    expression  go to state 15


State 10

    6 expression: expression '-' • expression

    NATURAL  shift, and go to state 1
    '('      shift, and go to state 2

    expression  go to state 16


State 11

    7 expression: expression '*' • expression

    NATURAL  shift, and go to state 1
    '('      shift, and go to state 2

    expression  go to state 17


State 12

    8 expression: expression '/' • expression

    NATURAL  shift, and go to state 1
    '('      shift, and go to state 2

    expression  go to state 18


State 13

    9 expression: '(' expression ')' •

    $default  reduce using rule 9 (expression)


State 14

    3 expressions: expressions ',' expression •
    5 expression: expression • '+' expression
    6           | expression • '-' expression
    7           | expression • '*' expression
    8           | expression • '/' expression

    '+'  shift, and go to state 9
    '-'  shift, and go to state 10
    '*'  shift, and go to state 11
    '/'  shift, and go to state 12

    $default  reduce using rule 3 (expressions)


State 15

    5 expression: expression • '+' expression
    5           | expression '+' expression •
    6           | expression • '-' expression
    7           | expression • '*' expression
    8           | expression • '/' expression

    '*'  shift, and go to state 11
    '/'  shift, and go to state 12

    $default  reduce using rule 5 (expression)


State 16

    5 expression: expression • '+' expression
    6           | expression • '-' expression
    6           | expression '-' expression •
    7           | expression • '*' expression
    8           | expression • '/' expression

    '*'  shift, and go to state 11
    '/'  shift, and go to state 12

    $default  reduce using rule 6 (expression)


State 17

    5 expression: expression • '+' expression
    6           | expression • '-' expression
    7           | expression • '*' expression
    7           | expression '*' expression •
    8           | expression • '/' expression

    $default  reduce using rule 7 (expression)


State 18

    5 expression: expression • '+' expression
    6           | expression • '-' expression
    7           | expression • '*' expression
    8           | expression • '/' expression
    8           | expression '/' expression •

    $default  reduce using rule 8 (expression)
